--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "dropship-app",
+  "name": "mvp-app",
   "version": "1.0.0",
-  "private": true,
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "firebase": "^9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "firebase": "^10.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "preview": "vite preview"
   },
   "devDependencies": {
+    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0"
+    "typescript": "^5.0.0"
   }
 }
