--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
-"dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "react-router-dom": "^6.20.0",
-  "firebase": "^9.0.0"
-},
-"devDependencies": {
-  "vite": "^5.0.0",
-  "@vitejs/plugin-react": "^4.0.0",
-  "typescript": "^5.0.0"
+{
+  "name": "mvp-app",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "firebase": "^9.6.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
+  }
 }
+
